[tool.poetry]
name = "planner"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
certifi = "^2023.11.17"
pylint = "^3.0.2"
pydantic = "1.9.0"
pydantic-settings = "^2.1.0"
fastapi-sqlalchemy = "^0.2.1"
python-dotenv = "^1.0.0"
postgres = "^4.0"
psycopg = "^3.1.14"
sqlalchemy = "2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"