[tool.poetry]
name = "planner"
version = "0.1.0"
[tool.poetry.dependencies]
greenlet = "1.1.2"
httptools = "0.4.0"
python = "^3.8"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
certifi = "^2023.11.17"
pydantic = "1.9.0"
pydantic-settings = "^2.1.0"
fastapi-sqlalchemy = "^0.2.1"
python-dotenv = "^1.0.0"
postgres = "^4.0"
psycopg = "^3.1.14"
SQLAlchemy = "2"
starlette = "0.36.2"
watchgod = "0.8.2"
websockets = "10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"